--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,18 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+      
   datasource: #jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1/mydb?characterEncoding=utf-8
+    url: jdbc:mysql://127.0.0.1/project?characterEncoding=utf-8
     username: root
     password: root1234
    
-      
+  servlet: #fileupload
+    multipart:
+      max-file-size: 20MB
+      enabled: true
+
+mybatis:
+  type-aliases-package: com.seu.app.vo
+  mapper-locations: mapper/*Mapper.xml      
